# proyecto-ciber

./: .dockerignore  .env.example  .gitignore  AWS_SOC_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml  deploy.yml
frontend/: index.html
lambda/: lambda_function.py
src/: config.h  database.h  main.cpp  seed.h
src/controllers/: incident_controller.cpp  incident_controller.h  soc_controller.cpp  soc_controller.h  swagger_controller.cpp  swagger_controller.h
src/models/: incident.h  soc_models.h
src/services/: incident_service.cpp  incident_service.h  security_service.cpp  security_service.h  soc_service.cpp  soc_service.h
terraform/: cloudtrail.tf  cloudwatch.tf  ecr.tf  ecs.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  terraform-plan.md  terraform.tfvars.example  variables.tf
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
